deploy/admissionregistration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sts-mutating-webhook
webhooks:
  - name: sts-webhook
    clientConfig:
      service:
        name: sts-webhook
        namespace: custom-system
        path: "/mutate"
        port: 8443
      caBundle: "xxx"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
    objectSelector:
      matchLabels:
        ab-build-different: "true"
